--- a/comparison.html
+++ b/comparison.html
@@ -169,7 +169,7 @@ We applied two simple, non-parametric techniques: <strong>binning and averaging<
         <td>&gt; −0.02</td>
         <td>Stable at frac=0.4 and bin_size=9</td>
         <td>Mid-to-high HSBC returns show the strongest positive association with subsidiaries returns.</td>
-        <td><a href="data/pair65_sp.pdf" target="_blank">View</a> Ownership_structure/Market perception</td>
+        <td><a href="data/pair65_1_sp.pdf" target="_blank">View</a> Ownership_structure/Market perception</td>
     </tr>
 
     <tr>
@@ -183,7 +183,7 @@ We applied two simple, non-parametric techniques: <strong>binning and averaging<
         <td>&gt; −0.05</td>
         <td>Stable at frac=0.2 and bin_size=9</td>
         <td>Suggests steady positive co-movement</td>
-        <td><a href="data/pair66_sp.pdf" target="_blank">View</a> Ownership_structure/Market perception</td>
+        <td><a href="data/pair66_1_sp.pdf" target="_blank">View</a> Ownership_structure/Market perception</td>
     </tr>
 
     <tr>
@@ -197,7 +197,7 @@ We applied two simple, non-parametric techniques: <strong>binning and averaging<
         <td>&gt; −0.03</td>
         <td>Stable trend at frac=0.3 and bin_size=11</td>
         <td>Returns flatten before −0.03, then show a clear linear rise.</td>
-        <td><a href="data/pair67_sp.pdf" target="_blank">View</a> Ownership_structure/Market perception</td>
+        <td><a href="data/pair67_1_sp.pdf" target="_blank">View</a> Ownership_structure/Market perception</td>
     </tr>
 
     <tr>
@@ -211,7 +211,7 @@ We applied two simple, non-parametric techniques: <strong>binning and averaging<
         <td>10 to 29</td>
         <td>Stable at frac=0.1 and bin_size=7</td>
         <td>Energy use increases steeply with emissions until ~30 units, then flattens. Indicates saturation, likely tied to infrastructure or efficiency ceilings.</td>
-        <td><a href="data/pair73_sp.pdf" target="_blank">View</a> Indirect causality: CO₂ emissions → policy → energy use</td>
+        <td><a href="data/pair73_1_sp.pdf" target="_blank">View</a> Indirect causality: CO₂ emissions → policy → energy use</td>
     </tr>
 
     <tr>
@@ -223,9 +223,9 @@ We applied two simple, non-parametric techniques: <strong>binning and averaging<
         <td>~125°</td>
         <td>200°</td>
         <td>—</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>—</td>
+        <td>—</td>
+        <td><a href="data/pair001_1_sp.pdf" target="_blank">View</a> Wind direction influence wind speed, particularly during storms.</td>
     </tr>
 
      <tr>
@@ -237,9 +237,9 @@ We applied two simple, non-parametric techniques: <strong>binning and averaging<
         <td>~125°</td>
         <td>210°</td>
         <td>—</td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td>—</td>
+        <td>—</td>
+        <td><a href="data/pair001_1_sp.pdf" target="_blank">View</a> Wind direction influence wind speed and shifts in weather conditions</td>
     </tr>
       </tbody>
     </table>
