--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     TU Cause-and-Effect Data Pairs Dataset
   </a>,
   <strong> pairs with Sr. No. (9–10)</strong> are from the
-  <a href="https://www.kaggle.com/datasets/mnassrib/jena-climate/data" target="_blank" rel="noopener noreferrer" style="text-decoration: underline; color: blue;">Jena Climate Dataset </a>,
-  which includes weather and environmental variables.Each pair includes data files, descriptive metadata, scatter plots (both original and normalized), and papers supporting the ground truth.
+  <a href="https://www.kaggle.com/datasets/mnassrib/jena-climate/data" target="_blank" rel="noopener noreferrer" style="text-decoration: underline; color: blue;">Jena Climate Dataset </a>, 
+  Additionally, synthetic time-dependent and temperature-dependent data pairs are also included. Each pair includes data files, descriptive metadata, scatter plots, and papers supporting the ground truth.
 </p> 
 <table>
     <colgroup>
@@ -89,8 +89,8 @@
       <col style="width:7%;">
       <col style="width:7%;">
       <col style="width:7%;">
-      <col style="width:7%;">
-      <col style="width:9%;">
+      <col style="width:6%;">
+      <col style="width:10%;">
       <col style="width:40%;"> 
     </colgroup>
 
